--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <meta charset="utf-8">
-<title>whale mural</title>
+<title>HOH equalz</title>
 <meta name="viewport" content="width=device-width">
-<meta name="description" content="whale wisdom blowhole">
+<meta name="description" content="whale vibing horses">
 <meta name="theme-color" content="deepskyblue">
 <meta name="color-scheme" content="light">
 
 <link rel="stylesheet" href="whorl.css" media=(color)>
 <link rel="stylesheet" href="whale.css">
-<link rel="next" href="https://webmural.com/ivory">
+<link rel="index" href="https://webmural.com/mpf">
 <base href="https://webmural.com">
 
 <article class="free">
-  <h1 class="whale">whale</h1>
+  <h1 class="whale"><a href="/mpf#21">hoh</a></h1>
   <p class="swish">
-  <a href="/imagine"><i>eye</i></a>
-  <a href="/love">love</a>
-  <a href="https://porpoise.page" rel="me">yo"</a>
-  <a href="/music">music</a>
+    <a href="/music">hard on hearing</a>
+    <a href="/mussel">heart of earring</a>
+    <a href="/butterfly">heard of horses</a>
+    <a href="https://p9e.page">herd of horses</a>
+    <a href="/whale">glow with the flow</a>
 </article>
